# PeaToPea

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  install.ps1  install.sh
.cursor/: hooks.json
.cursor/agents/: code-reviewer.md  test-runner.md  verifier.md
.cursor/hooks/: allow-shell.sh  allow-subagent.sh  session-start.sh  stop.py
.cursor/rules/: autonomous-workflow.mdc  code-review-standards.mdc  documentation-standards.mdc  pea-core-rust.mdc  peapod-context.mdc  security-practices.mdc  task-continuity.mdc  tasks-workflow.mdc  workflow-habits.mdc
.cursor/skills/architecture-guide/: SKILL.md
.cursor/skills/commit-and-cursor/: SKILL.md
.cursor/skills/peapod-build-test/: SKILL.md
.cursor/skills/peapod-platform-impl/: SKILL.md
.cursor/skills/peapod-tasks/: SKILL.md
.github/workflows/: ci.yml  release.yml
.tasks/: 00-project-setup.md  01-pea-core.md  02-windows.md  03-android.md  04-linux.md  05-ios.md  06-macos.md  07-protocol-and-interop.md  08-documentation.md  09-quality-and-metrics.md  README.md
docs/: API.md  ARCHITECTURE.md  INTEROP.md  PROTOCOL.md  QUALITY.md  RELEASE.md  TROUBLESHOOTING.md
pea-android/: README.md  settings.gradle.kts
pea-android/app/: build.gradle.kts
pea-android/app/src/main/: AndroidManifest.xml
pea-android/app/src/main/cpp/: CMakeLists.txt  pea_jni.c  pea_stub.c
pea-android/app/src/main/kotlin/dev/peapod/android/: BootReceiver.kt  Discovery.kt  LocalProxy.kt  MainActivity.kt  PeaCore.kt  PeaPodPreferences.kt  PeaPodVpnService.kt  SettingsActivity.kt  Transport.kt
pea-android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
pea-android/app/src/main/res/values/: strings.xml  themes.xml
pea-core/: Cargo.toml  README.md  cbindgen.toml
pea-core/src/: chunk.rs  core.rs  ffi.rs  identity.rs  integrity.rs  lib.rs  protocol.rs  scheduler.rs  wire.rs
pea-ios/: Package.swift  README.md
pea-ios/Sources/PeaPodIos/: PeaPodIos.swift
pea-linux/: Cargo.toml  README.md
pea-linux/misc/: peapod-system.service  peapod.service
pea-linux/src/: config.rs  discovery.rs  main.rs  proxy.rs  transport.rs
pea-macos/: Package.swift  README.md
pea-macos/Sources/PeaPodMacos/: PeaPodMacos.swift
pea-windows/: Cargo.toml  README.md
pea-windows/installer/: PeaPod.iss  README.md
pea-windows/src/: autostart.rs  discovery.rs  main.rs  proxy.rs  system_proxy.rs  transport.rs  tray.rs
scripts/: README.md  build-pea-core-apple.sh  interop-two-linux.sh
