[package]
name = "pea-windows"
version = "0.1.0"
edition = "2021"
description = "PeaPod protocol implementation for Windows (proxy, discovery, transport, tray)"

[dependencies]
pea-core = { path = "../pea-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time"] }
httparse = "1.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]} 
winreg = "0.52"
